tests/baselines/reference/YieldStarExpression2_es6.errors.txt
YieldStarExpression2_es6.ts(1,1): error TS2304: Cannot find name 'yield'.
YieldStarExpression2_es6.ts(1,8): error TS1109: Expression expected.


==== YieldStarExpression2_es6.ts (2 errors) ====
    yield *;
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.
           ~
!!! error TS1109: Expression expected.